--- a/wishes/public/index.html
+++ b/wishes/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://www.pngkey.com/png/full/125-1257008_event-png-free-download-tracing-your-scottish-ancestry.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel='stylesheet' media='screen and (min-device-width: 320px) and (max-device-width: 480px)' href='../css/max480.css' />
     <meta name="theme-color" content="#000000" />
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Events & Wishes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
